# linnaeus-arena

./: .env.example  .gitignore  CLAUDE.md  CONFIGURATIE_GIDS.md  README_SETUP.md  azure_arena.py  azure_config.py  config_example.py  dynamic_linnaeus.py  lm_arena_app.py  multi_model_arena.py  pyproject.toml  run_linnaeus.py  test_linnaeus.py
leaderboard/: .gitignore  README.md  app.py  db.py  package.json
leaderboard/public/: index.html  main.js  styles.css
leaderboard/src/: server.js  sqlite.js
notebooks/: launch.ipynb  llm_api_cfg.ipynb  monitor.ipynb  test_subjects.ipynb
