[tool.poetry]
name = "linnaeus-test"
version = "0.1.0"
description = ""
authors = ["Jornand de Buisonjé <Jornand.deBuisonje@uwv.nl>"]
readme = "README.md"
packages = [{include = "linnaeus_test", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.34.0"
pandas = "^2.3.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
